# milvus-db

./: Makefile  README.md  base.tf  cert-manager.tf  milvus-db.py  milvus-transformers.py  milvus.tf  milvus.yaml  pyproject.toml  qa.py
