[tool.poetry]
name = "milvus-db"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymilvus = "^2.4.0"
scipy = "^1.13.0"
sentence-transformers = "^2.6.1"
docutils = "^0.20"
towhee = "^1.1.3"
towhee-models = "^1.1.3"
gradio = "^4.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
